--- a/src/main/webapp/resources/css/admin/admin.css
+++ b/src/main/webapp/resources/css/admin/admin.css
@@ -255,6 +255,9 @@
 	.memberIdSpan:hover{
 		color: var(--fontColor);
 	}
+	.memberDiv:hover{
+		background-color: rgba(35, 35, 35, 0.62);
+	}
 
 
 }
