--- a/src/main/webapp/resources/css/shop/order/order_detail.css
+++ b/src/main/webapp/resources/css/shop/order/order_detail.css
@@ -165,9 +165,10 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    width: 450px;
-    height: 50px;
     display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
 
