--- a/src/main/webapp/resources/css/shop/product/product_detail_admin.css
+++ b/src/main/webapp/resources/css/shop/product/product_detail_admin.css
@@ -67,7 +67,7 @@ main {
 /*상단 오른쪽 상품 설명 구역*/
 .descriptionDiv {
     width: 100%;
-    height: 80%;
+    height: 65%;
     padding: 1rem;
     display: flex;
     align-items: center;
@@ -133,7 +133,7 @@ main {
 /*상단 오른쪽 버튼 구역*/
 .btnDiv {
     width: 100%;
-    height: 15%;
+    height: 20%;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -141,6 +141,7 @@ main {
 
 /*중단*/
 .productMiddle {
+    margin-top: 5rem;
     width: 100%;
     position: relative;
 }
@@ -185,6 +186,7 @@ main {
 
 /*하단 상품 리뷰 구역*/
 .productBottom {
+    margin-top: 5rem;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -339,10 +341,7 @@ main {
 }
 
 
-.reviewsContent {
-    overflow-y: scroll;
 
-}
 
 .reviewsContent, .reviewsPhoto {
     width: 50%;
